apply plugin: 'com.android.application'

android {
    namespace "com.benny.openlauncher"
    compileSdkVersion version_compileSdk
    buildToolsVersion version_buildTools

    buildFeatures {
        buildConfig true
        viewBinding true
    }

    defaultConfig {
        minSdkVersion version_minSdk
        targetSdkVersion version_compileSdk

        ndk {
            abiFilters "arm64-v8a"
        }

        buildConfigField "boolean", "IS_TEST_BUILD", "false"
        buildConfigField "boolean", "IS_GPLAY_BUILD", "false"
        buildConfigField "boolean", "IS_NIGHTLY_BUILD", "false"
        buildConfigField "String[]", "DETECTED_ANDROID_LOCALES", "${findUsedAndroidLocales()}"
        buildConfigField "String", "BUILD_DATE", "\"${getBuildDate()}\""
        buildConfigField "String", "GITHASH", "\"${getGitHash()}\""
        resValue "string", "manifest_package_id", "com.benny.openlauncher"

        resValue 'string', 'app_name', "OpenLauncher"

        applicationId "com.benny.openlauncher"
        versionCode 629
        versionName "0.9.9"
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
    tasks.withType(JavaCompile) {
        options.compilerArgs += ["-Xlint:deprecation", "-Xlint:unchecked"]
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
        debug {
            applicationIdSuffix ".debug"
        }
    }

    lint {
        disable 'MissingTranslation', 'InvalidPackage', 'ObsoleteLintCustomCheck', 'DefaultLocale', 'UnusedAttribute', 'VectorRaster', 'InflateParams', 'IconLocation', 'UnusedResources', 'TypographyEllipsis'
        abortOnError false
    }
}

dependencies {
    implementation "androidx.recyclerview:recyclerview:1.3.2"
    implementation "androidx.appcompat:appcompat:${version_library_appcompat}"
    implementation "androidx.cardview:cardview:1.0.0"
    implementation "com.google.android.material:material:1.11.0"
    implementation "androidx.legacy:legacy-support-v13:1.0.0"
    implementation "androidx.preference:preference:1.2.1"
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'com.jakewharton.threetenabp:threetenabp:1.4.4'

    implementation 'com.mikepenz:fastadapter:3.3.1'
    implementation 'com.mikepenz:fastadapter-commons:3.3.1'
    implementation 'com.mikepenz:fastadapter-extensions:3.3.1'
    implementation 'jp.wasabeef:recyclerview-animators:4.0.2'
    implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
    implementation 'com.github.TangoAgency:material-intro-screen:0.0.5'
    implementation 'cat.ereza:customactivityoncrash:2.4.0'
    implementation 'de.psdev.licensesdialog:licensesdialog:1.8.3'
    implementation 'com.github.championswimmer:SimpleFingerGestures_Android_Library:1.1'
    implementation 'com.nononsenseapps:filepicker:4.2.1'
    implementation 'org.slf4j:slf4j-android:1.7.36'

    implementation ('com.github.ozodrukh:CircularReveal:2.0.1@aar') {
        transitive = true
    }

    implementation('com.github.turing-tech:MaterialScrollBar:13.3.4') {
        exclude group: 'com.android.support'
    }

    implementation "com.github.bumptech.glide:glide:${version_library_glide}"
    annotationProcessor "com.github.bumptech.glide:compiler:${version_library_glide}"
}
